  noticeable on platforms where // is a different directory than /,
  but could also be observed with --relative-base=/ or
  --relative-to=/.  [bug since the beginning, in 8.15]

** Improvements

  ls can be much more efficient, especially with large directories on file
  systems for which getfilecon-, ACL-check- and XATTR-check-induced syscalls
  fail with ENOTSUP or similar.

  split now supports an unlimited number of split files as default behavior.


* Noteworthy changes in release 8.15 (2012-01-06) [stable]

** New programs

  realpath: print resolved file names.

** Bug fixes

  du -x no longer counts root directories of other file systems.
  [bug introduced in coreutils-5.1.0]

  ls --color many-entry-directory was uninterruptible for too long
  [bug introduced in coreutils-5.2.1]

  ls's -k option no longer affects how ls -l outputs file sizes.
  It now affects only the per-directory block counts written by -l,
  and the sizes written by -s.  This is for compatibility with BSD
  and with POSIX 2008.  Because -k is no longer equivalent to
  --block-size=1KiB, a new long option --kibibyte stands for -k.
  [bug introduced in coreutils-4.5.4]

  ls -l would leak a little memory (security context string) for each
  nonempty directory listed on the command line, when using SELinux.
  [bug probably introduced in coreutils-6.10 with SELinux support]

  rm -rf DIR would fail with "Device or resource busy" on Cygwin with NWFS
  and NcFsd file systems.  This did not affect Unix/Linux-based kernels.
  [bug introduced in coreutils-8.0, when rm began using fts]

  split -n 1/2 FILE no longer fails when operating on a growing file, or
  (on some systems) when operating on a non-regular file like /dev/zero.
  It would report "/dev/zero: No such file or directory" even though
  the file obviously exists.  Same for -n l/2.
  [bug introduced in coreutils-8.8, with the addition of the -n option]

  stat -f now recognizes the FhGFS and PipeFS file system types.
